[package]
name = "reach-link"
version = "1.0.1"
edition = "2021"
description = "Cross-platform printer agent for Klipper/Moonraker 3D printers"
license = "MIT"

[[bin]]
name = "reach-link"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
